objects/BMCServiceDesk__DiscoveryImportLog__c.object
<CustomObject>
    <description>Stores details about the import of discovered devices.</description>
    <fields>
        <fullName>BMCServiceDesk__ImportDate__c</fullName>
        <description>Stores successful import dates and time</description>
        <inlineHelpText>Stores successful import dates and time</inlineHelpText>
        <label>Import Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NextRunCMDBClass__c</fullName>
        <label>Next Run CMDBClass</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NextRunOffset__c</fullName>
        <label>Next Run Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecordsInserted__c</fullName>
        <description>Stores the number of records inserted during import</description>
        <inlineHelpText>Stores the number of records inserted during import</inlineHelpText>
        <label>Records Inserted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecordsReconciled__c</fullName>
        <description>Stores the number of reconciled records during an import job</description>
        <inlineHelpText>Stores the number of reconciled records during an import job</inlineHelpText>
        <label>Records Reconciled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__RecordsUpdated__c</fullName>
        <description>Stores the number of records updated during import job</description>
        <inlineHelpText>Stores the number of records updated during import job</inlineHelpText>
        <label>Records Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__TotalRecordsAffected__c</fullName>
        <description>Stores the total number of records inserted and updated</description>
        <formula>BMCServiceDesk__RecordsInserted__c  +  BMCServiceDesk__RecordsUpdated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Stores the total number of records inserted and updated</inlineHelpText>
        <label>Total Records Affected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discovery Import Log</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__ImportDate__c</columns>
        <columns>BMCServiceDesk__RecordsInserted__c</columns>
        <columns>BMCServiceDesk__RecordsUpdated__c</columns>
        <columns>BMCServiceDesk__TotalRecordsAffected__c</columns>
        <columns>BMCServiceDesk__NextRunCMDBClass__c</columns>
        <columns>BMCServiceDesk__NextRunOffset__c</columns>
        <filterScope>Everything</filterScope>
        <label>View details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Discovery Import Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discovery Import Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>